--- a/style.css
+++ b/style.css
@@ -86,3 +86,23 @@ ul {
 
   justify-content: center;
 }
+
+@media (min-width: 720px) {
+  /* Tablet styles */
+  main {
+    background: url(images/background_desktop.svg) no-repeat center/cover;
+    width: 100vw;
+    min-height: 812px;
+    height: 100vh;
+  }
+}
+
+@media (min-width: 960px) {
+  /* Desktop styles */
+  main {
+    background: url(images/background_desktop.svg) no-repeat center/cover;
+    width: 100vw;
+    min-height: 812px;
+    height: 100vh;
+  }
+}
